# freeware

FREEWARE80_1/000tools/: define_tools.com
FREEWARE80_1/a2ps/: a2ps.1  a2ps.alpha_exe  a2ps.alpha_obj  a2ps.c  a2ps.c_orig  a2ps.com  a2ps.com_orig  a2ps.hlp  a2ps.ia64_exe  a2ps.ia64_obj  a2ps.vax_exe  a2ps.vax_obj  descrip.mms  freeware_readme.txt  lprint.com  make.com  make.com_orig
FREEWARE80_1/ada-bookreader-docs/: freeware_readme.txt
FREEWARE80_1/adv_pipe/: freeware_readme.txt
FREEWARE80_1/adv_runusr/: freeware_readme.txt
FREEWARE80_1/antiword/: antiword_exe.readme  antiword_setup.com  antiword_vms.html  descrip.mms  freeware_readme.txt  makefile.vms  makefile.vms_bash  misc_vms_prefix.c  vms_make.com  vms_vax_make.com  wordviewer.com
FREEWARE80_1/aprt/: freeware_readme.txt
FREEWARE80_1/archie/: freeware_readme.txt
FREEWARE80_1/ask/: freeware_readme.txt
FREEWARE80_1/astyle_vms/: asbeautifier.cxx  asenhancer.cxx  asformatter.cxx  astyle.h  astyle_main.cxx  descrip.mms  freeware_readme.txt
FREEWARE80_1/atg_edt/: freeware_readme.txt
FREEWARE80_1/atg_eve/: freeware_readme.txt
FREEWARE80_1/atg_ft_patch/: freeware_readme.txt
FREEWARE80_1/atr_daemon/: freeware_readme.txt
FREEWARE80_1/auto/: auto.for  auto.inc  auto.opt  auto.version  auto_check_value.for  auto_check_value_not_vax.for  auto_check_value_vax.for  auto_cld.cld  auto_create_opt_file.com  auto_help.for  auto_help.hlb  auto_help.hlp  auto_msg.msg  auto_parse_not_vax.for  auto_parse_vax.for  auto_token.for  auto_util.for  freeware_readme.txt  make_auto_alpha.com  make_auto_ia64.com  make_auto_vax.com  release_notes.txt  symbol.inc  symbol_library.for  table.inc  table_library.for  terminal.inc  terminal_library.for  token.inc  user_guide.txt
FREEWARE80_1/axp-driver-example/: freeware_readme.txt
FREEWARE80_1/bat/: freeware_readme.txt
FREEWARE80_1/bison/: freeware_readme.txt
FREEWARE80_1/bitnet/: freeware_readme.txt
FREEWARE80_1/bliss/: bls32047.b  freeware_readme.txt
FREEWARE80_1/bliss-article/: bliss-article.ps  freeware_readme.txt
FREEWARE80_1/bliss-article-ps/: freeware_readme.txt
FREEWARE80_1/bliss-intro/: freeware_readme.txt
FREEWARE80_1/blocking/: freeware_readme.txt
FREEWARE80_1/bookman/: freeware_readme.txt
FREEWARE80_1/boss/: freeware_readme.txt
FREEWARE80_1/byacc/: freeware_demo.com  freeware_demo.txt  freeware_readme.txt
FREEWARE80_1/bzip2-1_0_3b_vms/: blocksort.c  bz-common.xsl  bz-fo.xsl  bz-html.xsl  bzdiff  bzdiff.1  bzgrep  bzgrep.1  bzip.css  bzip2.1  bzip2.1_preformatted  bzip2.c  bzip2.c_orig  bzip2.txt  bzip2recover.c  bzip2recover.c_orig  bzlib.c  bzlib.c_orig  bzlib.h  bzlib.h_orig  bzlib_private.h  bzlib_private.h_orig  bzmore  bzmore.1  changes  compress.c  crctable.c  decompress.c  dlltest.c  dlltest.dsp  entities.xml  format.pl  freeware_readme.txt  huffman.c  libbz2.def  libbz2.dsp  license  makefile  makefile-libbz2_so  makefile.msc  (+18 more)
FREEWARE80_1/c-format/: freeware_readme.txt
FREEWARE80_1/callable-ping/: freeware_readme.txt
FREEWARE80_1/cardreader/: freeware_readme.txt
FREEWARE80_1/catdoc/: freeware_readme.txt
FREEWARE80_1/cd/: freeware_readme.txt
FREEWARE80_1/cd-rom/: freeware_readme.txt
FREEWARE80_1/cd_player/: freeware_readme.txt
FREEWARE80_1/charm/: freeware_readme.txt
FREEWARE80_1/chklgi/: freeware_readme.txt
FREEWARE80_1/chown/: freeware_readme.txt
FREEWARE80_1/claim/: freeware_readme.txt
FREEWARE80_1/clear_errors/: freeware_readme.txt
FREEWARE80_1/clrref/: freeware_readme.txt
FREEWARE80_1/clue$sda_vax/: freeware_readme.txt
FREEWARE80_1/cmem/: freeware_readme.txt
FREEWARE80_1/cmpdir/: freeware_readme.txt
FREEWARE80_1/compare_dir/: freeware_readme.txt
FREEWARE80_1/compress/: freeware_readme.txt
FREEWARE80_1/cron/: freeware_readme.txt  kr-vms-cron-v0103--1.pcsi
FREEWARE80_1/crs/: freeware_readme.txt
FREEWARE80_1/csvsearch/: freeware_readme.txt
FREEWARE80_1/ctrl-verify/: freeware_readme.txt
FREEWARE80_1/curl/: freeware_readme.txt
FREEWARE80_1/cvtlis/: freeware_readme.txt
FREEWARE80_1/date/: freeware_readme.txt
FREEWARE80_1/dbs-build_libraries/: aaareadme.1st  dbssysrtl.alpha_exe  dbssysrtl.alpha_map  dbssysrtl.alpha_olb  dbssysrtl.ipf_exe  dbssysrtl.ipf_map  dbssysrtl.ipf_olb  dbssysrtl.vax_exe  dbssysrtl.vax_map  dbssysrtl.vax_olb  freeware_readme.txt  sys_objects.alpha_olb  sys_objects.ipf_olb  sys_objects.vax_olb
FREEWARE80_1/dbs-etherwatch/: aaareadme.1st  freeware_readme.txt
FREEWARE80_1/dbs-latwatch/: aaareadme.1st  build_image.com  dbssysrtl.olb  freeware_readme.txt  latwatch.card  latwatch.mar  latwatch.mem  latwatch.rno  latwatch.title_page  latwatch_cld.cld
FREEWARE80_1/dbs-netutils/: aaareadme.1st  freeware_readme.txt  nmadef.inc  structures.inc
FREEWARE80_1/dbs-nullsymbiont/: aaareadme.1st  (+1 more)
FREEWARE80_3/tnimage-3_5_2-vms/: 1.macro  2.macro  3.macro  4.macro  5.macro  6.macro  7.macro  8.macro  beep.macro  bilinear.macro  bttv_kit.tgz  calculator.h  calculator.l  calculator.tab_h  calculator.y  cameras  chernobyl1.tif_gz  chernobyl2.tif_gz  complex.h  config.h_example  config.h_in  config.status  config.sub  configure  configure.com  configure.in  deconvol2.tif  edge.filter  fft1.tif  fft2.tif  fonts1.tif_gz  fonts2.tif_gz  fonts3.tif_gz  freeware_readme.txt  gpl  gray  greek.tif  greek2.tif_gz  install  lex.yy_c2  (+104 more)
FREEWARE80_3/tnimage-3_5_2-vms/formats/: 3d  aaa  afm  ima  lum
FREEWARE80_3/tnimage-3_5_2-vms/wavelets/: 53.wavelet  b4_0.0_wavelet  b4_0.1_wavelet  b4_0.2_wavelet  b4_0.3_wavelet  b4_0.4_wavelet  b4_0.5_wavelet  b4_0.6_wavelet  b4_0.7_wavelet  b4_0.8_wavelet  b4_0.9_wavelet  b4_1.0_wavelet  b4_1.1_wavelet  b4_1.2_wavelet  b4_1.3_wavelet  b4_1.4_wavelet  b4_1.5_wavelet  b6_0.0_wavelet  b6_0.1_wavelet  b6_0.2_wavelet  b6_0.3_wavelet  b6_0.4_wavelet  b6_0.5_wavelet  b6_0.6_wavelet  b6_0.7_wavelet  b6_0.8_wavelet  b6_0.9_wavelet  b6_1.0_wavelet  b6_1.1_wavelet  b6_1.2_wavelet  b6_1.3_wavelet  b6_1.4_wavelet  b6_1.5_wavelet  bath_mean.wavelet  beylkin18.wavelet  bi10_0.1_0_wavelet  bi10_0.1_1_wavelet  bi10_0.1_2_wavelet  bi10_0.1_3_wavelet  bi10_0.1_4_wavelet  (+46 more)
(+2750 files in other folders)
